2000-07-31  Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc, gamewin.*, imagewin.*: support resolution switching
	with ALT-PLUS and ALT-MINUS. Also show messages when certain 'cheat'
	keys are pressed.
	* Makefile.am: make sure DEBUG_FLAGS is used at link.

2000-07-30  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Monsters attack automatically; midi's played.
	* actors.cc, gamewin.{cc,h}:  Show poisoned auras.

2000-07-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Added 'prev' field to Game_object, and added iterators.

	* Fixed nasty stack bug in Usecode.  Penumbra/blackrock now works.

2000-07-28 Tristan Tarrant  <tarrant_tristan@emc.com>
	
	* gamewin.cc, gametxt.cc, titles.cc: move initialization of endgame
	fonts to endgame.

2000-07-28 Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc: Implement "Home" key which recenters view on Avatar.
	Useful if you've been scrolling around with the arrow keys.
	Also implement config/gameplay/cheat option.

2000-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Support 'something_on' eggs.
	* Added ctrl-c cheat to create items.

2000-07-27 Tristan Tarrant  <tarrant_tristan@emc.com>
	
	* titles.cc: use Infidel's real name, correct some spelling mistakes, 
	put the "Damn you..." in the correct position even in unscaled 640x480.

2000-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Support ABRT & CATCH opcodes; fixes Skara Brae problems.

2000-07-24  Jeff Freedman  <jeff@amy.nerble.net>

	* Several risky Usecode changes.

2000-07-23  Jeff Freedman  <jeff@amy.nerble.net>

	* Teleports work now.
	* Fixed bug where monsters walked through walls.

2000-07-20 Tristan Tarrant  <tarrant_tristan@emc.com>

	* files/databuf.h: implemented an abstract DataSource class and Buffer, 
	Stream and File derivatives of it to enable reading data from any of 
	these.
	* vgafile.h, vgafile.cc: use new DataSource classes. More classes 
	should do this.

2000-07-18  Jeff Freedman  <jeff@amy.nerble.net>
